# event-platform

./: .gitignore  GEMINI.md  docker-compose.yaml
backend/: .env.example  Dockerfile  docker-compose.yaml  pyproject.toml
backend/app/: lifespan.py  main.py
backend/app/core/: config.py  db.py  redis.py  security.py
backend/app/dependencies/: auth.py
backend/app/models/: user.py
backend/app/routers/: health.py  main.py
backend/app/routers/analytics/: router.py
backend/app/routers/auth/: routes.py
backend/app/routers/events/: routes.py
backend/app/routers/users/: router.py
backend/app/schemas/: events.py
backend/app/services/: events.py
lib/: pyproject.toml
lib/src/lib/: __init__.py  config.py  db.py  redis.py
lib/src/lib/models/: __init__.py  event.py  event_metric.py  user.py
lib/src/lib/schemas/: __init__.py  auth.py
worker/: Dockerfile  batch_writer.py  processor.py  pyproject.toml  worker.py
worker/core/: config.py  db.py  redis.py
