[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "lib",
    "fastapi>=0.136.1",
    "greenlet>=3.5.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.29",
    "redis>=7.4.0",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.47.0",
]

[tool.uv.sources]
lib = { git = "https://github.com/VishwaKumaran/event-platform.git", subdirectory = "lib", branch = "main" }
