[project]
name = "lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vishwa", email = "vishwa33400@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "greenlet>=3.5.1",
    "pydantic-settings>=2.14.1",
    "redis>=8.0.0",
    "sqlmodel>=0.0.38",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
