[project]
name = "worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lib",
    "pydantic-settings>=2.14.1",
    "redis>=7.4.0",
]

[tool.uv.sources]
lib = { git = "https://github.com/VishwaKumaran/event-platform.git", subdirectory = "lib", branch = "main" }
